--- a/Escape Game Maker/Escape Game Maker.csproj
+++ b/Escape Game Maker/Escape Game Maker.csproj
@@ -211,17 +211,17 @@
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>C:/Users/codyj/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.analytics@1.0.1/UnityEngine.Analytics.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>C:/Users/codyj/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.purchasing@1.0.1/UnityEngine.Purchasing.dll</HintPath>
-    </Reference>
     <Reference Include="GETween">
       <HintPath>Assets/Kits/GUI Animator/Common/Plugins/GETween.dll</HintPath>
     </Reference>
     <Reference Include="GUIAnimator">
       <HintPath>Assets/Kits/GUI Animator/GUI Animator for Unity UI/Plugins/GUIAnimator.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Analytics">
+      <HintPath>C:/Users/codyj/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.analytics@1.0.1/UnityEngine.Analytics.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Purchasing">
+      <HintPath>C:/Users/codyj/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.purchasing@1.0.1/UnityEngine.Purchasing.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -276,6 +276,7 @@
     <Compile Include="Assets\Scripts\Rooms\RoomLoader.cs" />
     <Compile Include="Assets\Scripts\Rooms\RoomManager.cs" />
     <Compile Include="Assets\Scripts\Rooms\RoomTrigger.cs" />
+    <Compile Include="Assets\Scripts\Rooms\SubRoom.cs" />
     <Compile Include="Assets\Scripts\Scene Management\SceneManager.cs" />
   </ItemGroup>
   <ItemGroup>
